--- a/README
+++ b/README
@@ -18,9 +18,12 @@ ProportionFig.R - script to make panels d and e in Fig. 2
 
 coligoFigure-1.afdesign - Affinity Designer file for the figure.
 
-coligoTable - table linking coligo sequences to replicates. ABC refer to the three replicates for each coligo
-
 coligos16sITS.csv - coligo sequences
+
+coligoTable_novaseq2 - coligo read count table from complex Novaseq run involving samples from many different working groups
+
+coligoTable_testRun_iseq10 - table linking coligo sequences to replicates. ABC refer to the three replicates for each coligo. These data only include coligo, ISD (referred to as SG in the table), and mock community (MC).
+
 
 modifiedColigoChecker.R - script to determine prevalence of coligos among samples
 
